[package]
name = "ocomp"
version = "0.1.0"
edition = "2021"

[dependencies]
const_format = "0.2.34"

semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "signal"] }
lazy_static = "1.5"

uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
